--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Disable Git line ending conversion, to prevent packwiz index hashes changing when committing from Windows
 * -text
+modpack/config/fancymenu/assets/loadingscreen/background.mp4 filter=lfs diff=lfs merge=lfs -text
