feat(mg_secrets_of_mermaids): fixed typo in data files

--- a/modpack/kubejs/data/mg_secrets_of_mermaids/forge/biome_modifier/microspinus_biome_modifier.json
+++ b/modpack/kubejs/data/mg_secrets_of_mermaids/forge/biome_modifier/microspinus_biome_modifier.json
@@ -1,9 +1,6 @@
 {
   "type": "forge:add_spawns",
-  "biomes": [
-    "swamp",
-    "river"
-  ],
+  "biomes": [],
   "spawners": {
     "type": "mg_secrets_of_mermaids:microspinus",
     "weight": 7,
