--- a/modpack/kubejs/data/mg_secrets_of_mermaids/forge/biome_modifier/crab_girl_biome_modifier.json
+++ b/modpack/kubejs/data/mg_secrets_of_mermaids/forge/biome_modifier/crab_girl_biome_modifier.json
@@ -2,8 +2,7 @@
   "type": "forge:add_spawns",
   "biomes": [
     "aquatica:islands",
-    "minecraft:beach",
-    ""
+    "minecraft:beach"
 ],
   "spawners": {
     "type": "mg_secrets_of_mermaids:crab_girl",
