feat(fakename__ver_kadzu): made the mod necessary on server and client, instead of server only

--- a/modpack/mods/fakename__ver_kadzu.pw.toml
+++ b/modpack/mods/fakename__ver_kadzu.pw.toml
@@ -1,6 +1,6 @@
 name = "Fakename(unofficial)"
 filename = "TOOL_fakename_1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/qfjB9Ndb/versions/3n72p2N0/fakename_-1.20.1-ver_kadzu.jar"
